# ScamWeb

./: .gitignore  README.md  constant.py  main.py  pyproject.toml  service.py  setup.py
scripts/: createdb.sql
src/: black_list.json  constant.py  service.py
src/pages/: HomePage.html
